--- a/.github/workflows/padavan-NEWIFI3.yml
+++ b/.github/workflows/padavan-NEWIFI3.yml
@@ -8,7 +8,7 @@ on:
   #   - cron: '0 19 * * *'              # 每天国际时间19点，北京时间凌晨3点执行(北京+8)
   push: # push 操作
     branches: # 分支
-      - master # 主分支
+      - make # 主分支
     #   paths:                            # 路径
     #     - padavan/*                     # 监听Padavan目录下所有文件的push操作
     paths: # 路径
@@ -16,9 +16,9 @@ on:
   # watch:                              # 监视操作
   #   types: [started]                  # 点击 star 之后
 env:
-  DEVICES: "PSG1218" # 设备名字数组
   UPLOAD_FIRMWARE: true # 导出固件
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+  DEVICES:      "NEWIFI3" # 设备名字数组
 jobs:
   build:
     runs-on: ubuntu-18.04
