--- a/.github/workflows/padavan-HC5661A.yml
+++ b/.github/workflows/padavan-HC5661A.yml
@@ -12,7 +12,7 @@ on:
     #   paths:                            # 路径
     #     - padavan/*                     # 监听Padavan目录下所有文件的push操作
     paths: # 路径
-      - logs/n3.md # 监听logs目录下 n3.md 的push操作
+      - logs/HC5661A.md # 监听logs目录下 n3.md 的push操作
   # watch:                              # 监视操作
   #   types: [started]                  # 点击 star 之后
 env:
